# nushell-history-skim

./: Cargo.toml  README.md
