[package]
name = "nu-history-skim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.19"
clap = { version = "3.2.6", features = ["derive"] }
enum-map = "2.4.0"
gethostname = "0.2.3"
nu-path = "0.64.0"
reedline = { version = "0.7.0", features = ["sqlite"] }
skim = "0.9.4"
